src/bincfg/bincfg_grmr.output
Terminals unused in grammar

   TOK_ERROR_BAD
   TOK_ERROR_OOM


Grammar

    0 $accept: config_file $end

    1 config_file: config

    2 config: config sec_memspan
    3       | config sec_macro
    4       | config sec_varlike
    5       | config sec_unsup
    6       | seed_config
    7       | error_tok

    8 seed_config: %empty
    9            | eolns

   10 sec_memspan: sec_banksw
   11            | sec_mapping
   12            | sec_ecsbank
   13            | sec_memattr
   14            | sec_preload

   15 banksw_head: TOK_SEC_BANKSWITCH

   16 sec_banksw: banksw_head eoln banksw_list

   17 banksw_list: banksw_list banksw_rec
   18            | banksw_rec

   19 banksw_rec: hex_num '-' hex_num eoln
   20           | eoln
   21           | error_tok eoln

   22 mapping_head: TOK_SEC_MAPPING

   23 sec_mapping: mapping_head eoln mapping_list

   24 mapping_list: mapping_list mapping_rec
   25             | mapping_rec

   26 mapping_rec: hex_num '-' hex_num '=' hex_num memattr_page
   27            | eoln
   28            | error_tok eoln

   29 ecsbank_head: TOK_SEC_ECSBANK

   30 sec_ecsbank: ecsbank_head eoln ecsbank_list

   31 ecsbank_list: ecsbank_list ecsbank_rec
   32             | ecsbank_rec

   33 ecsbank_rec: hex_num ':' hex_num '-' hex_num '=' hex_num eoln
   34            | eoln
   35            | error_tok eoln

   36 memattr_head: TOK_SEC_MEMATTR

   37 sec_memattr: memattr_head eoln memattr_list

   38 memattr_list: memattr_list memattr_rec
   39             | memattr_rec

   40 memattr_rec: hex_num '-' hex_num '=' memattr_page
   41            | eoln
   42            | error_tok eoln

   43 memattr_page: eoln
   44             | memattr_tok dec_num memattr_page
   45             | TOK_PAGE hex_num memattr_page

   46 preload_head: TOK_SEC_PRELOAD

   47 sec_preload: preload_head eoln preload_list

   48 preload_list: preload_list preload_rec
   49             | preload_rec

   50 preload_rec: hex_num '-' hex_num '=' hex_num eoln
   51            | error_tok eoln
   52            | eoln

   53 macro_head: TOK_SEC_MACRO

   54 sec_macro: macro_head eoln macro_list

   55 macro_list: macro_list macro_rec
   56           | macro_rec

   57 macro_rec: TOK_MAC_QUIET macro_line
   58          | macro_line
   59          | TOK_MAC_QUIET eoln
   60          | eoln

   61 macro_line: mac_reg hex_num eoln
   62           | TOK_MAC_LOAD string dec_num hex_num eoln
   63           | TOK_MAC_WATCH ident watch_list eoln
   64           | TOK_MAC_POKE hex_num hex_num eoln
   65           | TOK_MAC_INSPECT hex_num eoln
   66           | TOK_MAC_RUNTO hex_num eoln
   67           | TOK_MAC_TRACE hex_num eoln
   68           | TOK_MAC_AHEAD eoln
   69           | TOK_MAC_BLANK eoln
   70           | TOK_MAC_RUN eoln
   71           | TOK_MAC_VIEW eoln
   72           | error_tok eoln

   73 mac_reg: TOK_MAC_REG

   74 watch_list: watch_list ',' watch_span
   75           | watch_span

   76 watch_span: watch_addr
   77           | watch_range

   78 watch_addr: hex_num

   79 watch_range: hex_num '-' hex_num

   80 sec_varlike: varlike_head eoln var_list

   81 varlike_head: TOK_SEC_VARS
   82             | TOK_SEC_JOYSTICK
   83             | TOK_SEC_KEYS
   84             | TOK_SEC_CAPSLOCK
   85             | TOK_SEC_NUMLOCK
   86             | TOK_SEC_SCROLLLOCK

   87 var_list: var_list var_rec
   88         | var_rec

   89 var_rec: ident '=' strnum eoln
   90        | eoln
   91        | error_tok eoln

   92 sec_unsup: unknown_head eoln

   93 unknown_head: TOK_SEC_DISASM
   94             | TOK_SEC_VOICES
   95             | TOK_SEC_UNKNOWN

   96 strnum: TOK_NAME
   97       | TOK_STRING
   98       | TOK_HEX
   99       | TOK_DEC
  100       | TOK_DECONLY

  101 dec_num: TOK_DEC
  102        | TOK_DECONLY

  103 hex_num: TOK_HEX
  104        | TOK_DEC

  105 ident: TOK_NAME
  106      | TOK_HEX
  107      | TOK_DEC
  108      | TOK_DECONLY

  109 string: TOK_NAME
  110       | TOK_STRING
  111       | TOK_HEX
  112       | TOK_DEC
  113       | TOK_DECONLY

  114 memattr_tok: TOK_RAM
  115            | TOK_ROM
  116            | TOK_WOM

  117 eolns: eolns eoln
  118      | eoln

  119 eoln: '\n'

  120 error_tok: error


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 119
',' (44) 74
'-' (45) 19 26 33 40 50 79
':' (58) 33
'=' (61) 26 33 40 50 89
error (256) 120
TOK_SEC_BANKSWITCH (258) 15
TOK_SEC_MAPPING (259) 22
TOK_SEC_ECSBANK (260) 29
TOK_SEC_MEMATTR (261) 36
TOK_SEC_PRELOAD (262) 46
TOK_SEC_MACRO (263) 53
TOK_SEC_VARS (264) 81
TOK_SEC_JOYSTICK (265) 82
TOK_SEC_KEYS (266) 83
TOK_SEC_CAPSLOCK (267) 84
TOK_SEC_NUMLOCK (268) 85
TOK_SEC_SCROLLLOCK (269) 86
TOK_SEC_DISASM (270) 93
TOK_SEC_VOICES (271) 94
TOK_SEC_UNKNOWN (272) 95
TOK_RAM (273) 114
TOK_ROM (274) 115
TOK_WOM (275) 116
TOK_PAGE (276) 45
TOK_MAC_QUIET (277) 57 59
TOK_MAC_REG (278) 73
TOK_MAC_AHEAD (279) 68
TOK_MAC_BLANK (280) 69
TOK_MAC_INSPECT (281) 65
TOK_MAC_LOAD (282) 62
TOK_MAC_RUN (283) 70
TOK_MAC_POKE (284) 64
TOK_MAC_RUNTO (285) 66
TOK_MAC_TRACE (286) 67
TOK_MAC_VIEW (287) 71
TOK_MAC_WATCH (288) 63
TOK_DECONLY (289) 100 102 108 113
TOK_DEC (290) 99 101 104 107 112
TOK_HEX (291) 98 103 106 111
TOK_NAME (292) 96 105 109
TOK_STRING (293) 97 110
TOK_ERROR_BAD (294)
TOK_ERROR_OOM (295)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
config_file (47)
    on left: 1, on right: 0
config (48)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4 5
seed_config (49)
    on left: 8 9, on right: 6
sec_memspan (50)
    on left: 10 11 12 13 14, on right: 2
banksw_head (51)
    on left: 15, on right: 16
sec_banksw (52)
    on left: 16, on right: 10
banksw_list (53)
    on left: 17 18, on right: 16 17
banksw_rec (54)
    on left: 19 20 21, on right: 17 18
mapping_head (55)
    on left: 22, on right: 23
sec_mapping (56)
    on left: 23, on right: 11
mapping_list (57)
    on left: 24 25, on right: 23 24
mapping_rec (58)
    on left: 26 27 28, on right: 24 25
ecsbank_head (59)
    on left: 29, on right: 30
sec_ecsbank (60)
    on left: 30, on right: 12
ecsbank_list (61)
    on left: 31 32, on right: 30 31
ecsbank_rec (62)
    on left: 33 34 35, on right: 31 32
memattr_head (63)
    on left: 36, on right: 37
sec_memattr (64)
    on left: 37, on right: 13
memattr_list (65)
    on left: 38 39, on right: 37 38
memattr_rec (66)
    on left: 40 41 42, on right: 38 39
memattr_page (67)
    on left: 43 44 45, on right: 26 40 44 45
preload_head (68)
    on left: 46, on right: 47
sec_preload (69)
    on left: 47, on right: 14
preload_list (70)
    on left: 48 49, on right: 47 48
preload_rec (71)
    on left: 50 51 52, on right: 48 49
macro_head (72)
    on left: 53, on right: 54
sec_macro (73)
    on left: 54, on right: 3
macro_list (74)
    on left: 55 56, on right: 54 55
macro_rec (75)
    on left: 57 58 59 60, on right: 55 56
macro_line (76)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72, on right: 57 58
mac_reg (77)
    on left: 73, on right: 61
watch_list (78)
    on left: 74 75, on right: 63 74
watch_span (79)
    on left: 76 77, on right: 74 75
watch_addr (80)
    on left: 78, on right: 76
watch_range (81)
    on left: 79, on right: 77
sec_varlike (82)
    on left: 80, on right: 4
varlike_head (83)
    on left: 81 82 83 84 85 86, on right: 80
var_list (84)
    on left: 87 88, on right: 80 87
var_rec (85)
    on left: 89 90 91, on right: 87 88
sec_unsup (86)
    on left: 92, on right: 5
unknown_head (87)
    on left: 93 94 95, on right: 92
strnum (88)
    on left: 96 97 98 99 100, on right: 89
dec_num (89)
    on left: 101 102, on right: 44 62
hex_num (90)
    on left: 103 104, on right: 19 26 33 40 45 50 61 62 64 65 66 67
    78 79
ident (91)
    on left: 105 106 107 108, on right: 63 89
string (92)
    on left: 109 110 111 112 113, on right: 62
memattr_tok (93)
    on left: 114 115 116, on right: 44
eolns (94)
    on left: 117 118, on right: 9 117
eoln (95)
    on left: 119, on right: 16 19 20 21 23 27 28 30 33 34 35 37 41
    42 43 47 50 51 52 54 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    80 89 90 91 92 117 118
error_tok (96)
    on left: 120, on right: 7 21 28 35 42 51 72 91


State 0

    0 $accept: . config_file $end

    error  shift, and go to state 1
    '\n'   shift, and go to state 2

    $end                reduce using rule 8 (seed_config)
    TOK_SEC_BANKSWITCH  reduce using rule 8 (seed_config)
    TOK_SEC_MAPPING     reduce using rule 8 (seed_config)
    TOK_SEC_ECSBANK     reduce using rule 8 (seed_config)
    TOK_SEC_MEMATTR     reduce using rule 8 (seed_config)
    TOK_SEC_PRELOAD     reduce using rule 8 (seed_config)
    TOK_SEC_MACRO       reduce using rule 8 (seed_config)
    TOK_SEC_VARS        reduce using rule 8 (seed_config)
    TOK_SEC_JOYSTICK    reduce using rule 8 (seed_config)
    TOK_SEC_KEYS        reduce using rule 8 (seed_config)
    TOK_SEC_CAPSLOCK    reduce using rule 8 (seed_config)
    TOK_SEC_NUMLOCK     reduce using rule 8 (seed_config)
    TOK_SEC_SCROLLLOCK  reduce using rule 8 (seed_config)
    TOK_SEC_DISASM      reduce using rule 8 (seed_config)
    TOK_SEC_VOICES      reduce using rule 8 (seed_config)
    TOK_SEC_UNKNOWN     reduce using rule 8 (seed_config)

    config_file  go to state 3
    config       go to state 4
    seed_config  go to state 5
    eolns        go to state 6
    eoln         go to state 7
    error_tok    go to state 8


State 1

  120 error_tok: error .

    $default  reduce using rule 120 (error_tok)


State 2

  119 eoln: '\n' .

    $default  reduce using rule 119 (eoln)


State 3

    0 $accept: config_file . $end

    $end  shift, and go to state 9


State 4

    1 config_file: config .
    2 config: config . sec_memspan
    3       | config . sec_macro
    4       | config . sec_varlike
    5       | config . sec_unsup

    TOK_SEC_BANKSWITCH  shift, and go to state 10
    TOK_SEC_MAPPING     shift, and go to state 11
    TOK_SEC_ECSBANK     shift, and go to state 12
    TOK_SEC_MEMATTR     shift, and go to state 13
    TOK_SEC_PRELOAD     shift, and go to state 14
    TOK_SEC_MACRO       shift, and go to state 15
    TOK_SEC_VARS        shift, and go to state 16
    TOK_SEC_JOYSTICK    shift, and go to state 17
    TOK_SEC_KEYS        shift, and go to state 18
    TOK_SEC_CAPSLOCK    shift, and go to state 19
    TOK_SEC_NUMLOCK     shift, and go to state 20
    TOK_SEC_SCROLLLOCK  shift, and go to state 21
    TOK_SEC_DISASM      shift, and go to state 22
    TOK_SEC_VOICES      shift, and go to state 23
    TOK_SEC_UNKNOWN     shift, and go to state 24

    $default  reduce using rule 1 (config_file)

    sec_memspan   go to state 25
    banksw_head   go to state 26
    sec_banksw    go to state 27
    mapping_head  go to state 28
    sec_mapping   go to state 29
    ecsbank_head  go to state 30
    sec_ecsbank   go to state 31
    memattr_head  go to state 32
    sec_memattr   go to state 33
    preload_head  go to state 34
    sec_preload   go to state 35
    macro_head    go to state 36
    sec_macro     go to state 37
    sec_varlike   go to state 38
    varlike_head  go to state 39
    sec_unsup     go to state 40
    unknown_head  go to state 41


State 5

    6 config: seed_config .

    $default  reduce using rule 6 (config)


State 6

    9 seed_config: eolns .
  117 eolns: eolns . eoln

    '\n'  shift, and go to state 2

    $default  reduce using rule 9 (seed_config)

    eoln  go to state 42


State 7

  118 eolns: eoln .

    $default  reduce using rule 118 (eolns)


State 8

    7 config: error_tok .

    $default  reduce using rule 7 (config)


State 9

    0 $accept: config_file $end .

    $default  accept


State 10

   15 banksw_head: TOK_SEC_BANKSWITCH .

    $default  reduce using rule 15 (banksw_head)


State 11

   22 mapping_head: TOK_SEC_MAPPING .

    $default  reduce using rule 22 (mapping_head)


State 12

   29 ecsbank_head: TOK_SEC_ECSBANK .

    $default  reduce using rule 29 (ecsbank_head)


State 13

   36 memattr_head: TOK_SEC_MEMATTR .

    $default  reduce using rule 36 (memattr_head)


State 14

   46 preload_head: TOK_SEC_PRELOAD .

    $default  reduce using rule 46 (preload_head)


State 15

   53 macro_head: TOK_SEC_MACRO .

    $default  reduce using rule 53 (macro_head)


State 16

   81 varlike_head: TOK_SEC_VARS .

    $default  reduce using rule 81 (varlike_head)


State 17

   82 varlike_head: TOK_SEC_JOYSTICK .

    $default  reduce using rule 82 (varlike_head)


State 18

   83 varlike_head: TOK_SEC_KEYS .

    $default  reduce using rule 83 (varlike_head)


State 19

   84 varlike_head: TOK_SEC_CAPSLOCK .

    $default  reduce using rule 84 (varlike_head)


State 20

   85 varlike_head: TOK_SEC_NUMLOCK .

    $default  reduce using rule 85 (varlike_head)


State 21

   86 varlike_head: TOK_SEC_SCROLLLOCK .

    $default  reduce using rule 86 (varlike_head)


State 22

   93 unknown_head: TOK_SEC_DISASM .

    $default  reduce using rule 93 (unknown_head)


State 23

   94 unknown_head: TOK_SEC_VOICES .

    $default  reduce using rule 94 (unknown_head)


State 24

   95 unknown_head: TOK_SEC_UNKNOWN .

    $default  reduce using rule 95 (unknown_head)


State 25

    2 config: config sec_memspan .

    $default  reduce using rule 2 (config)


State 26

   16 sec_banksw: banksw_head . eoln banksw_list

    '\n'  shift, and go to state 2

    eoln  go to state 43


State 27

   10 sec_memspan: sec_banksw .

    $default  reduce using rule 10 (sec_memspan)


State 28

   23 sec_mapping: mapping_head . eoln mapping_list

    '\n'  shift, and go to state 2

    eoln  go to state 44


State 29

   11 sec_memspan: sec_mapping .

    $default  reduce using rule 11 (sec_memspan)


State 30

   30 sec_ecsbank: ecsbank_head . eoln ecsbank_list

    '\n'  shift, and go to state 2

    eoln  go to state 45


State 31

   12 sec_memspan: sec_ecsbank .

    $default  reduce using rule 12 (sec_memspan)


State 32

   37 sec_memattr: memattr_head . eoln memattr_list

    '\n'  shift, and go to state 2

    eoln  go to state 46


State 33

   13 sec_memspan: sec_memattr .

    $default  reduce using rule 13 (sec_memspan)


State 34

   47 sec_preload: preload_head . eoln preload_list

    '\n'  shift, and go to state 2

    eoln  go to state 47


State 35

   14 sec_memspan: sec_preload .

    $default  reduce using rule 14 (sec_memspan)


State 36

   54 sec_macro: macro_head . eoln macro_list

    '\n'  shift, and go to state 2

    eoln  go to state 48


State 37

    3 config: config sec_macro .

    $default  reduce using rule 3 (config)


State 38

    4 config: config sec_varlike .

    $default  reduce using rule 4 (config)


State 39

   80 sec_varlike: varlike_head . eoln var_list

    '\n'  shift, and go to state 2

    eoln  go to state 49


State 40

    5 config: config sec_unsup .

    $default  reduce using rule 5 (config)


State 41

   92 sec_unsup: unknown_head . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 50


State 42

  117 eolns: eolns eoln .

    $default  reduce using rule 117 (eolns)


State 43

   16 sec_banksw: banksw_head eoln . banksw_list

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52
    '\n'     shift, and go to state 2

    banksw_list  go to state 53
    banksw_rec   go to state 54
    hex_num      go to state 55
    eoln         go to state 56
    error_tok    go to state 57


State 44

   23 sec_mapping: mapping_head eoln . mapping_list

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52
    '\n'     shift, and go to state 2

    mapping_list  go to state 58
    mapping_rec   go to state 59
    hex_num       go to state 60
    eoln          go to state 61
    error_tok     go to state 62


State 45

   30 sec_ecsbank: ecsbank_head eoln . ecsbank_list

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52
    '\n'     shift, and go to state 2

    ecsbank_list  go to state 63
    ecsbank_rec   go to state 64
    hex_num       go to state 65
    eoln          go to state 66
    error_tok     go to state 67


State 46

   37 sec_memattr: memattr_head eoln . memattr_list

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52
    '\n'     shift, and go to state 2

    memattr_list  go to state 68
    memattr_rec   go to state 69
    hex_num       go to state 70
    eoln          go to state 71
    error_tok     go to state 72


State 47

   47 sec_preload: preload_head eoln . preload_list

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52
    '\n'     shift, and go to state 2

    preload_list  go to state 73
    preload_rec   go to state 74
    hex_num       go to state 75
    eoln          go to state 76
    error_tok     go to state 77


State 48

   54 sec_macro: macro_head eoln . macro_list

    error            shift, and go to state 1
    TOK_MAC_QUIET    shift, and go to state 78
    TOK_MAC_REG      shift, and go to state 79
    TOK_MAC_AHEAD    shift, and go to state 80
    TOK_MAC_BLANK    shift, and go to state 81
    TOK_MAC_INSPECT  shift, and go to state 82
    TOK_MAC_LOAD     shift, and go to state 83
    TOK_MAC_RUN      shift, and go to state 84
    TOK_MAC_POKE     shift, and go to state 85
    TOK_MAC_RUNTO    shift, and go to state 86
    TOK_MAC_TRACE    shift, and go to state 87
    TOK_MAC_VIEW     shift, and go to state 88
    TOK_MAC_WATCH    shift, and go to state 89
    '\n'             shift, and go to state 2

    macro_list  go to state 90
    macro_rec   go to state 91
    macro_line  go to state 92
    mac_reg     go to state 93
    eoln        go to state 94
    error_tok   go to state 95


State 49

   80 sec_varlike: varlike_head eoln . var_list

    error        shift, and go to state 1
    TOK_DECONLY  shift, and go to state 96
    TOK_DEC      shift, and go to state 97
    TOK_HEX      shift, and go to state 98
    TOK_NAME     shift, and go to state 99
    '\n'         shift, and go to state 2

    var_list   go to state 100
    var_rec    go to state 101
    ident      go to state 102
    eoln       go to state 103
    error_tok  go to state 104


State 50

   92 sec_unsup: unknown_head eoln .

    $default  reduce using rule 92 (sec_unsup)


State 51

  104 hex_num: TOK_DEC .

    $default  reduce using rule 104 (hex_num)


State 52

  103 hex_num: TOK_HEX .

    $default  reduce using rule 103 (hex_num)


State 53

   16 sec_banksw: banksw_head eoln banksw_list .
   17 banksw_list: banksw_list . banksw_rec

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52
    '\n'     shift, and go to state 2

    $end                reduce using rule 16 (sec_banksw)
    TOK_SEC_BANKSWITCH  reduce using rule 16 (sec_banksw)
    TOK_SEC_MAPPING     reduce using rule 16 (sec_banksw)
    TOK_SEC_ECSBANK     reduce using rule 16 (sec_banksw)
    TOK_SEC_MEMATTR     reduce using rule 16 (sec_banksw)
    TOK_SEC_PRELOAD     reduce using rule 16 (sec_banksw)
    TOK_SEC_MACRO       reduce using rule 16 (sec_banksw)
    TOK_SEC_VARS        reduce using rule 16 (sec_banksw)
    TOK_SEC_JOYSTICK    reduce using rule 16 (sec_banksw)
    TOK_SEC_KEYS        reduce using rule 16 (sec_banksw)
    TOK_SEC_CAPSLOCK    reduce using rule 16 (sec_banksw)
    TOK_SEC_NUMLOCK     reduce using rule 16 (sec_banksw)
    TOK_SEC_SCROLLLOCK  reduce using rule 16 (sec_banksw)
    TOK_SEC_DISASM      reduce using rule 16 (sec_banksw)
    TOK_SEC_VOICES      reduce using rule 16 (sec_banksw)
    TOK_SEC_UNKNOWN     reduce using rule 16 (sec_banksw)

    banksw_rec  go to state 105
    hex_num     go to state 55
    eoln        go to state 56
    error_tok   go to state 57


State 54

   18 banksw_list: banksw_rec .

    $default  reduce using rule 18 (banksw_list)


State 55

   19 banksw_rec: hex_num . '-' hex_num eoln

    '-'  shift, and go to state 106


State 56

   20 banksw_rec: eoln .

    $default  reduce using rule 20 (banksw_rec)


State 57

   21 banksw_rec: error_tok . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 107


State 58

   23 sec_mapping: mapping_head eoln mapping_list .
   24 mapping_list: mapping_list . mapping_rec

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52
    '\n'     shift, and go to state 2

    $end                reduce using rule 23 (sec_mapping)
    TOK_SEC_BANKSWITCH  reduce using rule 23 (sec_mapping)
    TOK_SEC_MAPPING     reduce using rule 23 (sec_mapping)
    TOK_SEC_ECSBANK     reduce using rule 23 (sec_mapping)
    TOK_SEC_MEMATTR     reduce using rule 23 (sec_mapping)
    TOK_SEC_PRELOAD     reduce using rule 23 (sec_mapping)
    TOK_SEC_MACRO       reduce using rule 23 (sec_mapping)
    TOK_SEC_VARS        reduce using rule 23 (sec_mapping)
    TOK_SEC_JOYSTICK    reduce using rule 23 (sec_mapping)
    TOK_SEC_KEYS        reduce using rule 23 (sec_mapping)
    TOK_SEC_CAPSLOCK    reduce using rule 23 (sec_mapping)
    TOK_SEC_NUMLOCK     reduce using rule 23 (sec_mapping)
    TOK_SEC_SCROLLLOCK  reduce using rule 23 (sec_mapping)
    TOK_SEC_DISASM      reduce using rule 23 (sec_mapping)
    TOK_SEC_VOICES      reduce using rule 23 (sec_mapping)
    TOK_SEC_UNKNOWN     reduce using rule 23 (sec_mapping)

    mapping_rec  go to state 108
    hex_num      go to state 60
    eoln         go to state 61
    error_tok    go to state 62


State 59

   25 mapping_list: mapping_rec .

    $default  reduce using rule 25 (mapping_list)


State 60

   26 mapping_rec: hex_num . '-' hex_num '=' hex_num memattr_page

    '-'  shift, and go to state 109


State 61

   27 mapping_rec: eoln .

    $default  reduce using rule 27 (mapping_rec)


State 62

   28 mapping_rec: error_tok . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 110


State 63

   30 sec_ecsbank: ecsbank_head eoln ecsbank_list .
   31 ecsbank_list: ecsbank_list . ecsbank_rec

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52
    '\n'     shift, and go to state 2

    $end                reduce using rule 30 (sec_ecsbank)
    TOK_SEC_BANKSWITCH  reduce using rule 30 (sec_ecsbank)
    TOK_SEC_MAPPING     reduce using rule 30 (sec_ecsbank)
    TOK_SEC_ECSBANK     reduce using rule 30 (sec_ecsbank)
    TOK_SEC_MEMATTR     reduce using rule 30 (sec_ecsbank)
    TOK_SEC_PRELOAD     reduce using rule 30 (sec_ecsbank)
    TOK_SEC_MACRO       reduce using rule 30 (sec_ecsbank)
    TOK_SEC_VARS        reduce using rule 30 (sec_ecsbank)
    TOK_SEC_JOYSTICK    reduce using rule 30 (sec_ecsbank)
    TOK_SEC_KEYS        reduce using rule 30 (sec_ecsbank)
    TOK_SEC_CAPSLOCK    reduce using rule 30 (sec_ecsbank)
    TOK_SEC_NUMLOCK     reduce using rule 30 (sec_ecsbank)
    TOK_SEC_SCROLLLOCK  reduce using rule 30 (sec_ecsbank)
    TOK_SEC_DISASM      reduce using rule 30 (sec_ecsbank)
    TOK_SEC_VOICES      reduce using rule 30 (sec_ecsbank)
    TOK_SEC_UNKNOWN     reduce using rule 30 (sec_ecsbank)

    ecsbank_rec  go to state 111
    hex_num      go to state 65
    eoln         go to state 66
    error_tok    go to state 67


State 64

   32 ecsbank_list: ecsbank_rec .

    $default  reduce using rule 32 (ecsbank_list)


State 65

   33 ecsbank_rec: hex_num . ':' hex_num '-' hex_num '=' hex_num eoln

    ':'  shift, and go to state 112


State 66

   34 ecsbank_rec: eoln .

    $default  reduce using rule 34 (ecsbank_rec)


State 67

   35 ecsbank_rec: error_tok . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 113


State 68

   37 sec_memattr: memattr_head eoln memattr_list .
   38 memattr_list: memattr_list . memattr_rec

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52
    '\n'     shift, and go to state 2

    $end                reduce using rule 37 (sec_memattr)
    TOK_SEC_BANKSWITCH  reduce using rule 37 (sec_memattr)
    TOK_SEC_MAPPING     reduce using rule 37 (sec_memattr)
    TOK_SEC_ECSBANK     reduce using rule 37 (sec_memattr)
    TOK_SEC_MEMATTR     reduce using rule 37 (sec_memattr)
    TOK_SEC_PRELOAD     reduce using rule 37 (sec_memattr)
    TOK_SEC_MACRO       reduce using rule 37 (sec_memattr)
    TOK_SEC_VARS        reduce using rule 37 (sec_memattr)
    TOK_SEC_JOYSTICK    reduce using rule 37 (sec_memattr)
    TOK_SEC_KEYS        reduce using rule 37 (sec_memattr)
    TOK_SEC_CAPSLOCK    reduce using rule 37 (sec_memattr)
    TOK_SEC_NUMLOCK     reduce using rule 37 (sec_memattr)
    TOK_SEC_SCROLLLOCK  reduce using rule 37 (sec_memattr)
    TOK_SEC_DISASM      reduce using rule 37 (sec_memattr)
    TOK_SEC_VOICES      reduce using rule 37 (sec_memattr)
    TOK_SEC_UNKNOWN     reduce using rule 37 (sec_memattr)

    memattr_rec  go to state 114
    hex_num      go to state 70
    eoln         go to state 71
    error_tok    go to state 72


State 69

   39 memattr_list: memattr_rec .

    $default  reduce using rule 39 (memattr_list)


State 70

   40 memattr_rec: hex_num . '-' hex_num '=' memattr_page

    '-'  shift, and go to state 115


State 71

   41 memattr_rec: eoln .

    $default  reduce using rule 41 (memattr_rec)


State 72

   42 memattr_rec: error_tok . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 116


State 73

   47 sec_preload: preload_head eoln preload_list .
   48 preload_list: preload_list . preload_rec

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52
    '\n'     shift, and go to state 2

    $end                reduce using rule 47 (sec_preload)
    TOK_SEC_BANKSWITCH  reduce using rule 47 (sec_preload)
    TOK_SEC_MAPPING     reduce using rule 47 (sec_preload)
    TOK_SEC_ECSBANK     reduce using rule 47 (sec_preload)
    TOK_SEC_MEMATTR     reduce using rule 47 (sec_preload)
    TOK_SEC_PRELOAD     reduce using rule 47 (sec_preload)
    TOK_SEC_MACRO       reduce using rule 47 (sec_preload)
    TOK_SEC_VARS        reduce using rule 47 (sec_preload)
    TOK_SEC_JOYSTICK    reduce using rule 47 (sec_preload)
    TOK_SEC_KEYS        reduce using rule 47 (sec_preload)
    TOK_SEC_CAPSLOCK    reduce using rule 47 (sec_preload)
    TOK_SEC_NUMLOCK     reduce using rule 47 (sec_preload)
    TOK_SEC_SCROLLLOCK  reduce using rule 47 (sec_preload)
    TOK_SEC_DISASM      reduce using rule 47 (sec_preload)
    TOK_SEC_VOICES      reduce using rule 47 (sec_preload)
    TOK_SEC_UNKNOWN     reduce using rule 47 (sec_preload)

    preload_rec  go to state 117
    hex_num      go to state 75
    eoln         go to state 76
    error_tok    go to state 77


State 74

   49 preload_list: preload_rec .

    $default  reduce using rule 49 (preload_list)


State 75

   50 preload_rec: hex_num . '-' hex_num '=' hex_num eoln

    '-'  shift, and go to state 118


State 76

   52 preload_rec: eoln .

    $default  reduce using rule 52 (preload_rec)


State 77

   51 preload_rec: error_tok . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 119


State 78

   57 macro_rec: TOK_MAC_QUIET . macro_line
   59          | TOK_MAC_QUIET . eoln

    error            shift, and go to state 1
    TOK_MAC_REG      shift, and go to state 79
    TOK_MAC_AHEAD    shift, and go to state 80
    TOK_MAC_BLANK    shift, and go to state 81
    TOK_MAC_INSPECT  shift, and go to state 82
    TOK_MAC_LOAD     shift, and go to state 83
    TOK_MAC_RUN      shift, and go to state 84
    TOK_MAC_POKE     shift, and go to state 85
    TOK_MAC_RUNTO    shift, and go to state 86
    TOK_MAC_TRACE    shift, and go to state 87
    TOK_MAC_VIEW     shift, and go to state 88
    TOK_MAC_WATCH    shift, and go to state 89
    '\n'             shift, and go to state 2

    macro_line  go to state 120
    mac_reg     go to state 93
    eoln        go to state 121
    error_tok   go to state 95


State 79

   73 mac_reg: TOK_MAC_REG .

    $default  reduce using rule 73 (mac_reg)


State 80

   68 macro_line: TOK_MAC_AHEAD . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 122


State 81

   69 macro_line: TOK_MAC_BLANK . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 123


State 82

   65 macro_line: TOK_MAC_INSPECT . hex_num eoln

    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52

    hex_num  go to state 124


State 83

   62 macro_line: TOK_MAC_LOAD . string dec_num hex_num eoln

    TOK_DECONLY  shift, and go to state 125
    TOK_DEC      shift, and go to state 126
    TOK_HEX      shift, and go to state 127
    TOK_NAME     shift, and go to state 128
    TOK_STRING   shift, and go to state 129

    string  go to state 130


State 84

   70 macro_line: TOK_MAC_RUN . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 131


State 85

   64 macro_line: TOK_MAC_POKE . hex_num hex_num eoln

    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52

    hex_num  go to state 132


State 86

   66 macro_line: TOK_MAC_RUNTO . hex_num eoln

    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52

    hex_num  go to state 133


State 87

   67 macro_line: TOK_MAC_TRACE . hex_num eoln

    TOK_DEC  shift, and go to state 51
    TOK_HEX  shift, and go to state 52

    hex_num  go to state 134


State 88

   71 macro_line: TOK_MAC_VIEW . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 135


State 89

   63 macro_line: TOK_MAC_WATCH . ident watch_list eoln

    TOK_DECONLY  shift, and go to state 96
    TOK_DEC      shift, and go to state 97
    TOK_HEX      shift, and go to state 98
    TOK_NAME     shift, and go to state 99

    ident  go to state 136


State 90

   54 sec_macro: macro_head eoln macro_list .
   55 macro_list: macro_list . macro_rec
